# katiba-chat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  ENV  Procfile  README.md  common-requirements.txt  dev-requirements.txt  pyproject.toml  requirements.txt  todo.org
akash/: README.md  sdl.yaml
notebooks/: basic_rag.ipynb  constitution.json  decoded_judge_responses.json  ground_truth.ipynb  ground_truth_data.csv  ground_truth_data.json  judge_evaluations.csv  offline_eval_rag_responses.csv  offline_rag_evaluation.ipynb  rag_evaluation_data_generation.ipynb  rag_evaluation_responses.json  retrieval_evaluation.ipynb
src/katiba_chat/: __main__.py
src/katiba_chat/adapters/: generation.py  retrieval.py
src/katiba_chat/core/: __init__.py
src/katiba_chat/data/: constitution_articles.json
src/katiba_chat/entrypoints/: cli.py  common.py  gradio_app.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/fixtures/: constitution.json
tests/integration/: test_generation_adapters.py  test_retrieval_adapters.py
tests/unit/: test_core.py  test_utils.py
