[project]
name = "katiba_chat"
version = "0.0.1"
authors = [
  { name="KE programmer", email="ken@99nth.com" },
]
description = "Retrieval Augmented Generation for the Kenya Constitution"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
  "Whoosh-Reloaded==2.7.5",
]

[project.urls]
Homepage = "https://github.com/programmer-ke/katiba-chat"
Issues = "https://github.com/programmer-ke/katiba-chat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true

[tool.black]
line-length = 79
extend-exclude = 'notebooks\/.*$'

[[tool.mypy.overrides]]
module="whoosh.*"
ignore_missing_imports = true

[tool.pylint."messages control"]
# Only show warnings with the listed confidence levels. Leave empty to show all.
# Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]

# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
#disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "useless-suppression", "deprecated-pragma", "use-implicit-booleaness-not-comparison-to-string", "use-implicit-booleaness-not-comparison-to-zero", "use-symbolic-message-instead"]
disable = ["missing-class-docstring", "missing-function-docstring", "import-error", "no-name-in-module", "unsupported-binary-operation", "unsubscriptable-object", "unspecified-encoding", "relative-beyond-top-level"]
